# test_Gamma

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  triplet.py
.github/workflows/: .pre-commit-pr.yaml  pre-commit.yaml
test_Gamma/: Dockerfile  manage.py
test_Gamma/api/: apps.py  serializers.py  urls.py  views.py
test_Gamma/posts/: admin.py  apps.py  models.py
test_Gamma/test_Gamma/: asgi.py  settings.py  urls.py  wsgi.py
test_Gamma/tests/: tests_posts.py
