[tool.poetry]
name = "test-gamma"
version = "0.1.0"
description = ""
authors = ["Серей Овинцев <ozonti@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
django = "5.0.2"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
black = "^24.2.0"
django-phonenumber-field = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
